old/apps/utils/static/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: utils
  name: static
  labels:
    app: static
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: static
