old/apps/utils/static/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: utils
  labels:
    app: static
  name: static
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "semantic-web"
spec:
  tls:
    - secretName: "${SECRET_DOMAIN_ME/./-}-tls"
      hosts:
        - static.${SECRET_DOMAIN_ME}
  rules:
    - host: static.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  number: 80
